# nuprl

./: .gitignore  Cargo.toml  LICENSE  README.md  build_stdlib.sh
src/: de_bruijn.rs  main.rs  metadata.rs  object_id.rs  source.rs  stdlib.rs  unif_var.rs  utils.rs  var_stack.rs
src/grammar/: grammar.pest
src/path/: mod.rs  name_tree.rs  path.rs
src/phase1_parse/: error.rs  expr.rs  mod.rs  path.rs  pest_parser.rs  statement.rs
src/phase2_nameres/: definition.rs  expr.rs  exprkind_def.rs  inf_def.rs  mod.rs  proof.rs  statement.rs
src/phase3_proofck/: definition.rs  expr.rs  exprkind_def.rs  hypothesis.rs  inf_def.rs  inf_intrinsic.rs  inference.rs  library.rs  mod.rs  object.rs  proof.rs  sequent.rs  var_names.rs
src/std/: module.nuprl
src/uniform_term/: mod.rs  parser.rs  token_stream.rs  tokeniser.rs
src/uniform_term/level_expr/: mod.rs  parser.rs  tokeniser.rs
